[package]
name = "shapes"
version = "0.0.0"
authors = [""]
edition = "2018"
description = ""
categories = ["wasm"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web = "0"
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.2"
rand = { version = "0.7.3", features = ["wasm-bindgen"] }

[dependencies.web-sys]
version = "0.3.46"
features = [
  'console'
]

[lib]
crate-type =["cdylib"]

[profile.release]
lto = true
